# developer-test

./: .env  .gitignore  README.md  api.py  give-me-the-odds.py  pyproject.toml  run.sh  todo.md
frontend/: index.html
src/navigation/: cli.py  models.py  solver.py  utils.py
static/: index.html  style.css
templates/: error.html  index.html  odds.html
tests/: test_solver.py
