[project]
name = "navigation" # Required
version = "0.1.0" # Required
description = "A sample Python project" # Optional
requires-python = ">=3.7"
authors = [
    { name = "Amine Dirhoussi" }, # Optional
]
readme = "README.md" # Optional


# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
#
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [ # Optional
    "rich",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "jinja2",
    "pydantic-settings",
]


[project.optional-dependencies] # Optional
dev = ["pre-commit", "pytest", "ruff"]

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts] # Optional
give-me-the-odds = "navigation.cli:main"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
