[project]
name = "navigation"
version = "0.1.0"
description = "Solution to developper test"
requires-python = ">=3.7"
authors = [{ name = "Amine Dirhoussi" }]
readme = "README.md"
dependencies = [
    "rich==13.7.0",
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "jinja2==3.1.3",
    "pydantic-settings==2.1.0",
]


[project.optional-dependencies]
dev = ["pre-commit", "pytest", "ruff"]

[project.scripts]
give-me-the-odds = "navigation.cli:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
